fixed alignment

--- a/map/static/css/map.css
+++ b/map/static/css/map.css
@@ -138,11 +138,15 @@ vertical-align: top;
 }
 
 #car-map {
-  width: 90% !important;
+  /* width: 90% !important; */
+  margin: 5%;
+  width: 90%;
+  max-width: 100%;
   height: 200px !important;
   margin: 5%;
+  text-align: left;
   margin-bottom: 1%;
-  margin-top: 0;
+  margin-top: 1%;
 }
 
 @media
@@ -226,8 +230,8 @@ td {
 	border: 0 none;
 	border-radius: 1px;
 	cursor: pointer;
-	padding: 10px 5px;
-	margin: 10px 5px;
+	/* padding: 5px 5px;
+	margin: 5px 5px; */
 }
 #stepper .action-button:hover, #stepper .action-button:focus {
 	box-shadow: 0 0 0 2px white, 0 0 0 3px #27AE60;
@@ -241,6 +245,7 @@ td {
 	counter-reset: step;
   margin-top: 25px;
   text-align: center;
+  padding-left: 0;
 }
 #progressbar li {
 	list-style-type: none;
